--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "letterpeople",
   "version": "0.0.1",
   "main": "./dist/letterpeople.umd.js",
-  "module": "./dis/letterpeople.es.js",
+  "module": "./dist/letterpeople.es.js",
   "types": "./dist/index.d.ts",
   "packageManager": "yarn@4.6.0",
   "scripts": {
@@ -13,7 +13,6 @@
     "animejs": "^4.0.2"
   },
   "devDependencies": {
-    "@types/animejs": "^3.1.13",
     "@types/node": "^22.15.3",
     "typescript": "^5.8.3",
     "vite": "^6.3.4",
