--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "packageManager": "yarn@4.6.0",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build"
+    "build": "tsc && vite build",
+    "build:demo": "vite build --config vite.config.demo.ts"
   },
   "dependencies": {
     "animejs": "^4.0.2"
