--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,8 +1,8 @@
 name: Deploy to GitHub Pages
 
 on:
-  push:
-    branches: [ main ]
+  pull_request:
+    branches: [main]
   workflow_dispatch:
 
 permissions:
@@ -20,29 +20,29 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      
+
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '20'
-          cache: 'yarn'
-      
+          node-version: "20"
+          cache: "yarn"
+
       - name: Install dependencies
         run: yarn install --immutable
-        
+
       - name: Build library
         run: yarn build
-        
+
       - name: Build demo site
         run: yarn build:demo
-        
+
       - name: Setup Pages
         uses: actions/configure-pages@v3
-        
+
       - name: Upload artifact
-        uses: actions/upload-pages-artifact@v1
+        uses: actions/upload-pages-artifact@v2
         with:
-          path: 'demo-dist'
+          path: "demo-dist"
 
   deploy:
     environment:
