--- a/package.json
+++ b/package.json
@@ -5,6 +5,18 @@
   "main": "./dist/letterpeople.umd.js",
   "module": "./dist/letterpeople.es.js",
   "types": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/letterpeople.es.js",
+      "require": "./dist/letterpeople.umd.js",
+      "types": "./dist/index.d.ts"
+    },
+    "./vue": {
+      "import": "./dist/letterpeople-vue.es.js",
+      "require": "./dist/letterpeople-vue.umd.js",
+      "types": "./dist/vue/index.d.ts"
+    }
+  },
   "files": [
     "dist"
   ],
@@ -35,10 +47,15 @@
   "dependencies": {
     "animejs": "^4.0.2"
   },
+  "peerDependencies": {
+    "vue": "^3.0.0"
+  },
   "devDependencies": {
     "@types/node": "^22.15.3",
+    "@vitejs/plugin-vue": "^5.2.0",
     "typescript": "^5.8.3",
     "vite": "^6.3.4",
-    "vite-plugin-dts": "^4.5.3"
+    "vite-plugin-dts": "^4.5.3",
+    "vue": "^3.0.0"
   }
 }
