--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
   },
   "homepage": "https://github.com/patched-network/letterpeople#readme",
   "dependencies": {
-    "animejs": "^4.0.2"
+    "animejs": "4.1.3"
   },
   "peerDependencies": {
     "vue": "^3.0.0"
